crates/parser/src/tests/snapshots/kcl_parser__tests__types__list_type_4.snap
---
source: crates/parser/src/tests/types.rs
expression: "$crate :: tests :: parsing_type_string(r####\"[[str]]\"####)"
---
Node {
    node: List(
        ListType {
            inner_type: Some(
                Node {
                    node: List(
                        ListType {
                            inner_type: Some(
                                Node {
                                    node: Basic(
                                        Str,
                                    ),
                                    filename: "",
                                    line: 1,
                                    column: 2,
                                    end_line: 1,
                                    end_column: 5,
                                },
                            ),
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 6,
                },
            ),
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 7,
}
