crates/parser/src/tests/snapshots/kcl_parser__tests__types__literal_type_0.snap
---
source: crates/parser/src/tests/types.rs
expression: "$crate :: tests :: parsing_type_string(r####\"True\"####)"
---
Node {
    node: Literal(
        Bool(
            true,
        ),
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 4,
}
