crates/parser/src/tests/snapshots/kcl_parser__tests__types__literal_type_2.snap
---
source: crates/parser/src/tests/types.rs
expression: "$crate :: tests :: parsing_type_string(r####\"123\"####)"
---
Node {
    node: Literal(
        Int(
            IntLiteralType {
                value: 123,
                suffix: None,
            },
        ),
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 3,
}
