crates/parser/src/tests/snapshots/kcl_parser__tests__types__literal_type_4.snap
---
source: crates/parser/src/tests/types.rs
expression: "$crate :: tests :: parsing_type_string(r####\"\"abc\"\"####)"
---
Node {
    node: Literal(
        Str(
            "abc",
        ),
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 5,
}
